kubernetes/apps/home-assistant/wol-relay/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wol-relay
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wol-relay
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: home-assistant
      ports:
        - port: 8080
          protocol: TCP
        - port: 8089
          protocol: UDP
  # Applies to the Cilium interface, not the secondary VLAN interface.
  egress: []
